--- a/rules.yaml
+++ b/rules.yaml
@@ -89,7 +89,7 @@ config:
     # 一些确定的域名
     # #33 针对 amemv.com 域名下的 -normal- 关键词代理就能实现IP归属地修改。如果对全局域名进行代理的话，请求的视频内容大部分来自海外cdn。
     # - DOMAIN-SUFFIX,bytetos.com # CDN
-    # - DOMAIN-SUFFIX,amemv.com
+    - DOMAIN-SUFFIX,amemv.com
     # - DOMAIN-SUFFIX,zijieapi.com
     # - DOMAIN-SUFFIX,awemeughun.com
     # - DOMAIN-SUFFIX,ecombdapi.com
