--- a/rules.yaml
+++ b/rules.yaml
@@ -73,8 +73,8 @@ config:
     # Append
     # issue#33#issuecomment-1421094069
     # - DOMAIN-KEYWORD,-normal-
-    - DOMAIN-SUFFIX,zijieapi.com,DIRECT
-    - DOMAIN-SUFFIX,ecombdapi.com,DIRECT
+    - DOMAIN-SUFFIX,zijieapi.com
+    - DOMAIN-SUFFIX,ecombdapi.com
     - DOMAIN-KEYWORD,-normal-hl
     - DOMAIN-KEYWORD,-normal-c-hl
     - DOMAIN-KEYWORD,-core-c-hl
@@ -107,6 +107,10 @@ config:
     - DOMAIN,sso.douyin.com # 登录
     - DOMAIN,www.douyin.com # Web版PC端
     - DOMAIN-SUFFIX,snssdk.com # API域名
+    - DOMAIN-SUFFIX,douyincdn.com,DIRECT
+    - DOMAIN-SUFFIX,zjcdn.com,DIRECT
+    - DOMAIN-SUFFIX,douyinliving.com,DIRECT
+    - DOMAIN-SUFFIX,byteimg.com,DIRECT
     # ======= 小红书 ======= #
     # issue#4 提供
     - DOMAIN-SUFFIX,xiaohongshu.com
